# sims2-tools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
SiMidge/: SiMidge.pyw  SiMidgeDebug.py
SimTracker/: SimTracker.pyw
docs/simidge/: config.md  usage.md
docs/simtracker/: config.md  usage.md
sims2/: __init__.py
sims2/common/: config.py  logging.py
sims2/dbpf/: __init__.py  utils.py
sims2/simidge/: __main__.py  _config.py  config.py  search.py
sims2/simtracker/: __main__.py  _config.py  config.ini  config.py  search.py  sim.py  widgets.py
src/sims2/common/: __init__.py
src/sims2/dbpf/: utils.py
src/sims2/simidge/: __init__.py  __main__.py  search.py
src/sims2/simtracker/: __init__.py  _config.py  search.py  sim.py  widgets.py
