[project]
name = "sims2"
version = "0.2.0"
description = "Tools for viewing The Sims 2 package files."
readme = "README.md"
authors = [
    { name = "midgethetree", email = "76988393+midgethetree@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
simidge = "sims2.simidge:main"
simtracker = "sims2.simtracker:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sims2"]
