[project]
name = "sims2"
version = "0.2.0"
description = "Tools for viewing The Sims 2 package files."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "midgethetree", email = "76988393+midgethetree@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
simidge = "sims2.simidge:main"
simtracker = "sims2.simtracker:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
